--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input
                   type="checkbox"
                   name="time"
-                  value="morning"
+                  value="utro"
                   class="search-form__checkbox visually-hidden"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
@@ -46,7 +46,7 @@
                 <input
                   type="checkbox"
                   name="time"
-                  value="afternoon"
+                  value="vecher"
                   class="search-form__checkbox visually-hidden"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
@@ -56,7 +56,7 @@
                 <input
                   type="checkbox"
                   name="time"
-                  value="night"
+                  value="noch"
                   class="search-form__checkbox visually-hidden"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
